src/test/deca/syntax/valid/while/while_classic.deca
// Description:
//    Test file demonstrating the use of while loops in Java.
//
// Results:
//    TODO
//
// History:
//    created on 06/01/2025

{
    // Variables
    int counter = 0;
    int limit = 10;

    // Simple while loop
    while (counter < limit) {
        print("Counter: " + counter);
        counter = counter + 1;
    }
}