src/test/deca/syntax/invalid/cast/missing_cast_type_11.deca
// Description:
//    Tests a syntactically incorrect program for a cast expression missing a cast type
//
// Results:
//    Line 11 : Error, expected cast type.
//
// History:
//    created on 07/01/2025

{
    int a = () 10;
}